[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "md"
version = "0.1.0"
description = "A clean, simple terminal markdown viewer with a pager."
requires-python = ">=3.8"
dependencies = [
    "rich>=13.0.0",
    "click>=8.0.0",
]

[project.scripts]
md = "md:main"

[tool.setuptools]
py-modules = ["md"]
